--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kabirsingh2004/JUGNU-MUSIC#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
     "@distube/soundcloud": "^1.3.3",
     "@distube/spotify": "^1.6.0",
@@ -30,13 +31,16 @@
     "discord.js": "^14.14.1",
     "distube": "^4.1.1",
     "dotenv": "^16.4.5",
+    "erlpack": "^0.1.4",
     "express": "^4.19.2",
     "ffmpeg-static": "^5.2.0",
     "libsodium-wrappers": "^0.7.13",
     "mongoose": "^8.2.3",
     "opusscript": "^0.1.1",
+    "punycode": "^2.3.1",
     "simple-find-lyrics": "^0.0.1",
     "systeminformation": "^5.22.6",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "zlib-sync": "^0.1.9"
   }
 }
